traefik/rollout-single.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 30
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: stable-rollout-pod
  template:
    metadata:
      labels:
        app: stable-rollout-pod
    spec:
      containers:
      - name: rollout-traefik-experiment
        image: argoproj/rollouts-demo:green
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
